# heterodyne

./: .gitignore  .gitmodules  README.md  __main__.py  _mojibake.py  experiments.ipynb  experiments.py  ke_mpi_county.csv  measure.py  pyproject.toml  requirements.txt  scaling.py  scaling_resources.py
checkpoint/318351d5-57cf-4059-9e16-98c4afb66034/rdd-3275/: .part-00020.crc
checkpoint/851cb2cc-51b1-4b1b-8966-3319e6326c56/rdd-2005/: part-00016
data/: zoo-benchmark
replication/: common.py  constants.py  lazy_resources.py  lib.py  pstats_backport.py
replication/models/: cnn.py  knn.py  logistic.py  random_forest.py  svm.py
replication/runtime/: __main__.py  experiments.py
scripts/: download-zoo-resources.sh
src/heterodyne/features/: __init__.py  _data.py  _impl.py  _sample.py  _simple.py  util.py
tests/: conftest.py  test_pure_features.py
tests/spark/: conftest.py  test_base_feature_extraction.py  test_spark_works.py
